--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,5 +39,8 @@
     <slot />
   </body>
   <script src="../utils/scrollReveal.js"></script>
-  <script src="../utils/hacktextEffect.js"></script>
+  <script>
+    import hacktext from "../utils/hacktextEffect";
+    hacktext();
+  </script>
 </html>
