cambios estilos globales

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,11 +33,16 @@ import Contact from "../components/ContactComponents/Contact.astro";
 
 <style is:global>
   .hacktext_hover_effect,
+  .hacktext_click_effect,
   .hacktext {
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
       "Liberation Mono", "Courier New", monospace;
     color: white;
     padding: 0rem clamp(1rem, 2vw, 3rem);
+  }
+
+  .hacktext_hover_effect,
+  .hacktext {
     border-radius: clamp(0.4rem, 0.75vw, 1rem);
   }
 
