nowrap en el nombre

--- a/src/components/InicioComponents/Inicio.astro
+++ b/src/components/InicioComponents/Inicio.astro
@@ -12,7 +12,7 @@ import { dataInicio } from "../../config/config";
       class="text-[2.5rem] text-white md:text-[3rem] lg:text-[4rem] xl:text-[5rem] font-bold text-center md:text-end font-mono"
     >
       <span>{dataInicio.textHeader}</span>
-      <span class="hacktext" data-value={dataInicio.name}
+      <span class="hacktext whitespace-nowrap" data-value={dataInicio.name}
         >{dataInicio.name}</span
       >
       <span class="hacktext whitespace-nowrap hidden sm:inline-block" data-value={dataInicio.textHeader2 + " " + dataInicio.textHeader3}>
