--- a/src/components/Shared/HeaderText.astro
+++ b/src/components/Shared/HeaderText.astro
@@ -6,5 +6,5 @@ interface Props {
 const { text } = Astro.props as Props
 ---
 
-<h1 class="hacktext uppercase text-white text-5xl text-center md:text-start" data-value={ text }>{ text }</h1>
+<h1 class="uppercase text-white text-5xl text-center md:text-start" data-value={ text }>{ text }</h1>
 <hr>
