--- a/src/components/HeaderComponents/HeaderNav.astro
+++ b/src/components/HeaderComponents/HeaderNav.astro
@@ -3,7 +3,7 @@ import { dataHeader } from "../../config/config";
 ---
 
 <nav
-  class="fixed z-10 w-full flex justify-end md:justify-center items-center p-4 h-16 bg-colorBg"
+  class="fixed z-10 w-full flex justify-end md:justify-center items-center p-4 h-16 bg-colorBg shadow-2xl"
 >
   <div
     class="hidden md:flex flex-row font-bold text-xl gap-x-2 text-white whitespace-nowrap"
