sombreado añadido al sidenav

--- a/src/components/HeaderComponents/HeaderNav.astro
+++ b/src/components/HeaderComponents/HeaderNav.astro
@@ -27,7 +27,7 @@ import { dataHeader } from "../../config/config";
 
 <nav id="rigthSideNav" class="hidden">
   <div
-    class="z-20 fixed flex flex-col gap-y-6 p-5 top-0 bottom-0 right-0 w-72 bg-colorBgDarker"
+    class="z-20 fixed flex flex-col gap-y-6 p-5 top-0 bottom-0 right-0 w-72 bg-colorBgDarker shadow-2xl"
   >
     <div class="w-full flex justify-end pr-3">
       <button class="togglemenu rounded-xl hover:bg-white/5 py-1 px-3">
