--- a/src/components/InicioComponents/Button.astro
+++ b/src/components/InicioComponents/Button.astro
@@ -7,8 +7,11 @@ interface Props {
 const { text, url } = Astro.props as Props;
 ---
 
-<a href={url} class="font-mono text-lg sm:text-base lg:text-xl"
-  ><span>{text}</span></a
+<a
+  href={url}
+  target="_blank"
+  rel="noopener noreferrer"
+  class="font-mono text-lg sm:text-base lg:text-xl"><span>{text}</span></a
 >
 
 <style>
