--- a/src/components/HeaderComponents/HeaderNav.astro
+++ b/src/components/HeaderComponents/HeaderNav.astro
@@ -27,9 +27,29 @@ import { dataHeader } from "../../config/config";
     }
   </div>
   <button
-    class="togglemenu rounded-xl hover:bg-white/5 py-1 px-2 inline md:hidden mr-4"
+    class="togglemenu rounded-xl hover:bg-white/5 p-2 inline md:hidden mr-4"
   >
-    <i class="fa fa-bars text-white text-xl" aria-hidden="true"></i>
+    <svg
+      version="1.1"
+      id="Layer_1"
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      x="0px"
+      y="0px"
+      width="20px"
+      height="20px"
+      fill="white"
+      viewBox="0 0 122.879 103.609"
+      enable-background="new 0 0 122.879 103.609"
+      xml:space="preserve"
+      ><g
+        ><path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M10.368,0h102.144c5.703,0,10.367,4.665,10.367,10.367v0 c0,5.702-4.664,10.368-10.367,10.368H10.368C4.666,20.735,0,16.07,0,10.368v0C0,4.665,4.666,0,10.368,0L10.368,0z M10.368,82.875 h102.144c5.703,0,10.367,4.665,10.367,10.367l0,0c0,5.702-4.664,10.367-10.367,10.367H10.368C4.666,103.609,0,98.944,0,93.242l0,0 C0,87.54,4.666,82.875,10.368,82.875L10.368,82.875z M10.368,41.438h102.144c5.703,0,10.367,4.665,10.367,10.367l0,0 c0,5.702-4.664,10.368-10.367,10.368H10.368C4.666,62.173,0,57.507,0,51.805l0,0C0,46.103,4.666,41.438,10.368,41.438 L10.368,41.438z"
+        ></path></g
+      ></svg
+    >
   </button>
 </nav>
 
@@ -38,8 +58,28 @@ import { dataHeader } from "../../config/config";
     class="z-20 fixed flex flex-col gap-y-6 p-5 top-0 bottom-0 right-0 w-72 bg-colorBgDarker shadow-2xl"
   >
     <div class="w-full flex justify-end pr-3">
-      <button class="togglemenu rounded-xl hover:bg-white/5 py-1 px-3">
-        <i class="fa fa-times text-white text-xl" aria-hidden="true"></i>
+      <button class="togglemenu rounded-xl hover:bg-white/5 p-2">
+        <svg
+          version="1.1"
+          id="Layer_1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          x="0px"
+          y="0px"
+          width="18px"
+          height="18px"
+          fill="white"
+          viewBox="0 0 121.31 122.876"
+          enable-background="new 0 0 121.31 122.876"
+          xml:space="preserve"
+          ><g
+            ><path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M90.914,5.296c6.927-7.034,18.188-7.065,25.154-0.068 c6.961,6.995,6.991,18.369,0.068,25.397L85.743,61.452l30.425,30.855c6.866,6.978,6.773,18.28-0.208,25.247 c-6.983,6.964-18.21,6.946-25.074-0.031L60.669,86.881L30.395,117.58c-6.927,7.034-18.188,7.065-25.154,0.068 c-6.961-6.995-6.992-18.369-0.068-25.397l30.393-30.827L5.142,30.568c-6.867-6.978-6.773-18.28,0.208-25.247 c6.983-6.963,18.21-6.946,25.074,0.031l30.217,30.643L90.914,5.296L90.914,5.296z"
+            ></path></g
+          ></svg
+        >
       </button>
     </div>
 
