--- a/src/components/ProjectsComponents/ProjectCard.astro
+++ b/src/components/ProjectsComponents/ProjectCard.astro
@@ -37,8 +37,26 @@ const { image, title, urlCode, url, techIcons } = Astro.props as Props;
       href={urlCode}
       class="flex items-center justify-center text-white text-lg text-center font-LexendDeca w-32 h-12 hover:bg-white/10"
     >
-      <i class="fa fa-code mr-3" aria-hidden="true"></i>
-      Código
+      <svg
+        version="1.1"
+        id="Layer_1"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        x="0px"
+        y="0px"
+        width="24px"
+        height="24px"
+        fill="white"
+        viewBox="0 0 122.88 101.57"
+        style="enable-background:new 0 0 122.88 101.57"
+        xml:space="preserve"
+        ><g
+          ><path
+            d="M44.97,12.84h-17.2L0,49.37L27.77,85.9h17.2L17.2,49.37L44.97,12.84L44.97,12.84z M77.91,12.84h17.2l27.77,36.53 L95.11,85.9h-17.2l27.77-36.53L77.91,12.84L77.91,12.84z M70.17,0.04l5.96,1.39c0.94,0.22,1.52,1.16,1.31,2.1l-22.5,96.69 c-0.22,0.93-1.16,1.52-2.1,1.31l-5.95-1.39c-0.94-0.22-1.52-1.16-1.31-2.1l22.5-96.69C68.3,0.42,69.24-0.17,70.17,0.04L70.17,0.04 L70.17,0.04z"
+          ></path></g
+        ></svg
+      >
+      <span class="ml-2">Código</span>
     </a>
     <a
       target="_blank"
@@ -46,8 +64,19 @@ const { image, title, urlCode, url, techIcons } = Astro.props as Props;
       href={url}
       class="flex items-center justify-center text-white text-lg text-center font-LexendDeca w-32 h-12 hover:bg-white/10"
     >
-      <i class="fa fa-link mr-3" aria-hidden="true"></i>
-      Demo
+      <svg
+        id="Layer_1"
+        data-name="Layer 1"
+        width="20px"
+        height="20px"
+        fill="white"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 122.88 122.88"
+        ><path
+          d="M60.54,34.07A7.65,7.65,0,0,1,49.72,23.25l13-12.95a35.38,35.38,0,0,1,49.91,0l.07.08a35.37,35.37,0,0,1-.07,49.83l-13,12.95A7.65,7.65,0,0,1,88.81,62.34l13-13a20.08,20.08,0,0,0,0-28.23l-.11-.11a20.08,20.08,0,0,0-28.2.07l-12.95,13Zm14,3.16A7.65,7.65,0,0,1,85.31,48.05L48.05,85.31A7.65,7.65,0,0,1,37.23,74.5L74.5,37.23ZM62.1,89.05A7.65,7.65,0,0,1,72.91,99.87l-12.7,12.71a35.37,35.37,0,0,1-49.76.14l-.28-.27a35.38,35.38,0,0,1,.13-49.78L23,50A7.65,7.65,0,1,1,33.83,60.78L21.12,73.49a20.09,20.09,0,0,0,0,28.25l0,0a20.07,20.07,0,0,0,28.27,0L62.1,89.05Z"
+        ></path></svg
+      >
+      <span class="ml-2">Demo</span>
     </a>
   </div>
 </div>
