Cambio tamaño del texto

--- a/src/components/AboutComponents/Aboutme.astro
+++ b/src/components/AboutComponents/Aboutme.astro
@@ -20,7 +20,7 @@ import { dataAboutMe } from "../../config/config";
     </div>
 
     <p
-      class="text-white font-Rubik w-72 md:w-[24rem] lg:w-[32rem] xl:w-[50rem] 2xl:w-[60rem] text-lg lg:text-2xl"
+      class="text-white font-Rubik w-72 md:w-[24rem] lg:w-[32rem] xl:w-[50rem] 2xl:w-[60rem] text-lg lg:text-xl xl:text-3xl"
     >
       {dataAboutMe.text}
     </p>
